Add LambDynamicLights integration

--- a/src/main/resources/assets/throwabletorch/lang/en_us.json
+++ b/src/main/resources/assets/throwabletorch/lang/en_us.json
@@ -2,6 +2,9 @@
   "item.throwabletorch.throwable_slime_torch" : "Throwable Slime Torch",
   "item.throwabletorch.throwable_clay_torch" : "Throwable Clay Torch",
   "item.throwabletorch.throwable_magma_torch" : "Throwable Magma Torch",
-  "item.throwabletorch.throwable_honeycomb_torch" : "Throwable Honeycomb Torch"
-
+  "item.throwabletorch.throwable_honeycomb_torch" : "Throwable Honeycomb Torch",
+  "entity.throwabletorch.throwable_slime_torch": "Throwable Slime Torch",
+  "entity.throwabletorch.throwable_clay_torch": "Throwable Clay Torch",
+  "entity.throwabletorch.throwable_magma_torch": "Throwable Magma Torch",
+  "entity.throwabletorch.throwable_honeycomb_torch": "Throwable Honeycomb Torch"
 }
